Moved dist to docs for GitHub Pages

--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://vaishnavipawar1331.github.io/MyPortfolio",
   "name": "portfolio",
   "private": true,
   "version": "0.0.0",
